--- a/css/styles.css
+++ b/css/styles.css
@@ -94,3 +94,29 @@ a {
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
+/* Footer Styles */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #212121;
+  text-align: center;
+  position: relative;
+  margin-top: 15px;
+}
+
+.footer h2 {
+  background-color: #212121;
+  color: white;
+  padding: 10px;
+  margin: 0;
+}
+
+.socialLinks a {
+  display: inline-block;
+  margin: 20px;
+  font-size: 1rem;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
